# cardano-tokens-and-credentials

./: README.md
data/: README.md
docs/: Flow.md
minimized-plutus-compiler-error/: test-app.cabal
minimized-plutus-compiler-error/Minimize/src/Plutus/Contracts/: Test1.hs
prism-schema/: link-did-to-address.json  locked-amount.json  proof-of-ownity.json  proof-of-payment.json  transaction-control.json
smart-contracts/: README.md  cabal.project.local  proofspace-token-credentials.cabal  token-credentials.cabal
smart-contracts/credentialTokens/src/ProofSpace/Contracts/OffChain/: CredToken.hs
smart-contracts/credentialTokens/src/ProofSpace/Contracts/OnChain/: CredToken.hs
smart-contracts/pab/: PabContracts.hs
smart-contracts/pab/emu/: Main.hs
smart-contracts/pab/run/: Main.hs
smart-contracts/tokenCredentials/src/Plutus/Contracts/: DidAddress.hs
smart-contracts/tokenCredentials/src/Plutus/Contracts/OffChain/: DidAddress.hs  LockValue.hs  ProofspaceCommon.hs
smart-contracts/tokenCredentials/src/Plutus/Contracts/OnChain/: DidAddress.hs  LockValue.hs
smart-contracts/tokenCredentials/src/ProofSpace/Contracts/OffChain/: DidAddress.hs  LockValue.hs  PaymentCred.hs  ProofspaceCommon.hs
smart-contracts/tokenCredentials/src/ProofSpace/Contracts/OnChain/: DidAddress.hs  DidAddressV2.hs  LockValue.hs
tcproxy-scala/: build.sbt
tcproxy-scala/project/: plugins.sbt
tcproxy-scala/src/main/scala/proofspace/cardano/tokenConnector/: Application.scala
tcproxy-scala/src/main/scala/proofspace/cardano/tokenConnector/controllers/: SubmitDIDController.scala
tcproxy-scala/src/main/scala/proofspace/cardano/tokenConnector/dto/: DidAddressAssociationInput.scala  HttpErrorDTO.scala
tool/: build.sbt
tool/src/main/scala/proofspace/cardano/tokenConnector/: Application.scala
