cabal-version:      3.0
name:               token-credentials
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:	Token-Credentials contract helper



-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:  https://github.com/zakaio/cardano-token-based-credentials/issues


license: Apache-2.0
license-files: LICENSE
author:             Ruslan Shevchenko
maintainer:         ruslan@proofspace.id

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      MyModule
      Plutus.Contracts.Game
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
    hs-source-dirs: src tokenCredentials/src

test-suite plutus-tokenCredentials-projects-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: tokenCredentials/test
  other-modules:
    Spec.Game
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-pab -any,
    plutus-ledger -any,
    token-credentials -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    text -any,
    tasty-hedgehog >=0.2.0.0


executable token-credentials-pab
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    data-default -any,
    plutus-contract -any,
    plutus-pab -any,
    token-credentials -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    openapi3 -any,
